--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "postcss-import": "^14.0.2",
     "postcss-load-config": "^3.1.0",
     "postcss-preset-env": "^7.0.1"
+  },
+  "dependencies": {
+    "@hotwired/turbo": "^7.1.0"
   }
 }
