--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^14.0.2",
     "postcss-load-config": "^3.1.0",
-    "postcss-preset-env": "^7.0.1"
+    "postcss-preset-env": "^7.0.1",
+    "tailwindcss": "^3.0.23"
   },
   "dependencies": {
     "@hotwired/turbo": "^7.1.0"
