--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postcss-import": "^14.0.2",
     "postcss-load-config": "^3.1.0",
     "postcss-preset-env": "^7.0.1",
+    "purgecss": "^4.1.3",
     "tailwindcss": "^3.0.23"
   },
   "dependencies": {
