--- a/bridgetown.config.yml
+++ b/bridgetown.config.yml
@@ -14,7 +14,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 #
 
-url: "" # the base hostname & protocol for your site, e.g. https://example.com
+url: "https://agnevaitkeviciute.com"
 
 permalink: pretty
 template_engine: liquid
@@ -26,6 +26,6 @@ template_engine: liquid
 # If you're using esbuild for frontend assets, edit `esbuild.config.js` to
 # update `publicPath`.
 
-# timezone: America/Los_Angeles
+timezone: Europe/Luxembourg
 # pagination:
 #   enabled: true
