--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "tailwindcss": "^3.0.23"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.1",
     "@hotwired/turbo": "^7.1.0"
   }
 }
