--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
     "esbuild-dev": "node esbuild.config.js --watch"
   },
   "devDependencies": {
+    "cssnano": "^5.1.5",
     "esbuild": "^0.13.15",
     "glob": "^7.2.0",
     "postcss": "^8.4.0",
+    "postcss-color-function": "^4.1.0",
+    "postcss-easy-import": "^4.0.0",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^14.0.2",
     "postcss-load-config": "^3.1.0",
+    "postcss-mixins": "^9.0.2",
     "postcss-preset-env": "^7.0.1",
+    "purgecss": "^4.1.3",
     "tailwindcss": "^3.0.23"
   },
   "dependencies": {
