--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "esbuild-dev": "node esbuild.config.js --watch"
   },
   "devDependencies": {
+    "@prettier/plugin-ruby": "^2.1.0",
     "cssnano": "^5.1.5",
     "esbuild": "^0.14.32",
     "glob": "^7.2.0",
@@ -17,6 +18,10 @@
     "postcss-load-config": "^3.1.0",
     "postcss-mixins": "^9.0.2",
     "postcss-preset-env": "^7.0.1",
+    "prettier": "^2.6.2",
+    "prettier-config-standard": "^5.0.0",
+    "prettier-plugin-erb": "^0.4.0",
+    "prettier-plugin-sh": "^0.10.1",
     "purgecss": "^4.1.3",
     "tailwindcss": "^3.0.23"
   },
