--- a/.env.template
+++ b/.env.template
@@ -4,13 +4,15 @@
 # For Flickr API key and shared secret, see https://www.flickr.com/services/api/keys/
 
 # API key and shared secret are required to access the public parts of the Flickr API
-FLICKR_API_KEY=FLICKR_API_KEY
-FLICKR_API_SHARED_SECRET=FLICKR_API_SHARED_SECRET
-
-# API access token and secret are user specific, and required to access the private/authenticated parts of the Flickr API.
-# See flickr gem examples/auth.rb (`gem content flickr | grep examples/auth.rb`)
-FLICKR_API_ACCESS_TOKEN=FLICKR_API_ACCESS_TOKEN
-FLICKR_API_ACCESS_SECRET=FLICKR_API_ACCESS_SECRET
+FLICKR_KEY="FLICKR_API_KEY"
+FLICKR_SECRET="FLICKR_API_SHARED_SECRET"
 
 # Flickr ID of the user account to build a portfolio for
-FLICKR_USER_NSID=FLICKR_USER_NSID
+FLICKR_USER="FLICKR_USER_NSID"
+
+# Directory to cache JSON objects fetched from Flickr API
+FLICKR_CACHE=".cache/flickr"
+# Retention for refreshing photo information in Flickr cache directory
+FLICKR_RETENTION="1 day"
+# Empty JSON objects in cache directory
+#FLICKR_EMPTY_CACHE="true"
