Change flickr data download dir to src/_data to use as Bridgetown data files

--- a/bridgetown.config.yml
+++ b/bridgetown.config.yml
@@ -27,5 +27,5 @@ template_engine: liquid
 # update `publicPath`.
 
 timezone: Europe/Luxembourg
-# pagination:
-#   enabled: true
+pagination:
+  enabled: true
