Resolve "Move Flickr API credentials and user ID to Bridgetown site configuration"

--- a/.env.template
+++ b/.env.template
@@ -1,18 +1,8 @@
-# Copy this file to .env
-# Change the values of the variables to your Flickr API key/secrets/user
-
 # For Flickr API key and shared secret, see https://www.flickr.com/services/api/keys/
 
 # API key and shared secret are required to access the public parts of the Flickr API
-FLICKR_KEY="FLICKR_API_KEY"
-FLICKR_SECRET="FLICKR_API_SHARED_SECRET"
+FLICKR_API_KEY="01234567890abcdefghijklmnopqrstu"
+FLICKR_API_SECRET="0123456789abcdef"
 
-# Flickr ID of the user account to build a portfolio for
-FLICKR_USER="FLICKR_USER_NSID"
-
-# Directory to cache JSON objects fetched from Flickr API
-FLICKR_CACHE=".cache/flickr"
-# Retention for refreshing photo information in Flickr cache directory
-FLICKR_RETENTION="1 day"
-# Empty JSON objects in cache directory
-#FLICKR_EMPTY_CACHE="true"
+# Flickr ID "NSID" of the user account to build a portfolio for
+FLICKR_USER_ID="123456789@N01"
