--- a/bridgetown.config.yml
+++ b/bridgetown.config.yml
@@ -29,3 +29,8 @@ template_engine: liquid
 timezone: Europe/Luxembourg
 pagination:
   enabled: true
+
+flickr_portfolio:
+  api_key: ENV.FLICKR_API_KEY
+  api_secret: ENV.FLICKR_API_SECRET
+  user_id: ENV.FLICKR_USER_ID
