Resolve "Config options for layouts and components"

--- a/bridgetown.config.yml
+++ b/bridgetown.config.yml
@@ -34,3 +34,6 @@ flickr_portfolio:
   api_key: ENV.FLICKR_API_KEY
   api_secret: ENV.FLICKR_API_SECRET
   user_id: ENV.FLICKR_USER_ID
+  layout:
+    photo: flickr_photo
+    portfolio: flickr_portfolio
