Update .gitlab-ci.yml file

--- a/.editorconfig
+++ b/.editorconfig
@@ -2,5 +2,14 @@
 indent_style = space
 indent_size = 2
 
-[node_modules/**]
+[.asdf]
+ignore = true
+
+[node_modules]
+ignore = true
+
+[output]
+ignore = true
+
+[vendor]
 ignore = true
