--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,3 +2,11 @@ require: standard
 
 inherit_gem:
   standard: config/ruby-3.0.yml
+
+AllCops:
+  Exclude:
+    - ".git/**/*"
+    - "node_modules/**/*"
+    - "tmp/**/*"
+    - "output/**/*"
+    - "vendor/**/*"
