Resolve "Add Honeybadger"

--- a/.env.template
+++ b/.env.template
@@ -3,3 +3,6 @@
 # API key and shared secret are required to access the public parts of the Flickr API
 FLICKR_API_KEY="01234567890abcdefghijklmnopqrstu"
 FLICKR_API_SECRET="0123456789abcdef"
+
+HONEYBADGER_API_KEY="0123456789abcdefghijklmnopqrstuvwxyzABCD"
+HONEYBADGER_ENV="development"
