--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
+    "@honeybadger-io/js": "^4.0.1",
     "@hotwired/turbo": "^7.1.0"
   }
 }
