ci: Use Ruby of container

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,7 @@ test:
   script:
     - source .gitlab/ci.sh
     - ci_section asdf ./.gitlab/asdf.sh && source .asdf/asdf.sh
+    - asdf local ruby system
     - ci_section setup ./bin/setup
     - |
       ci_start tool-versions
